objects/Business_Roles__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dairy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOL Dairy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FGI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FGI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManagerInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManagerInfo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purina__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purina</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WinField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WinField</label>
        <type>Checkbox</type>
    </fields>
    <label>Business Roles</label>
</CustomObject>